fix(puzzle0): overflow of input field

--- a/style/ui.css
+++ b/style/ui.css
@@ -125,6 +125,8 @@
         transform:translateY(200%);
     }
     .input{
+        height:40px;
+        width:50px;
         background-color: black;
         color: white;
         font-size: 20px;
